# slae

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/csr_matrix/: csr_matrix.h
src/dense_matrix/: dense_matrix.h
src/gauss_seidel_method/: gauss_seidel_method.h
src/jacobi_method/: jacobi_method.h
src/simple_iteration_method/: simple_iteration_method.h
src/tridiag_matrix/: tridiag_matrix.h
src/tridiag_solver/: tridiag_solver.h
tests/: CMakeLists.txt  tests.cpp
tests/matrixes/: matrix1.txt  matrix2.txt  matrix3.txt
